# m

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  hello.c  hello.m  jest.config.js  llvm.md  notes.md  package-lock.json  package.json  sample.mlir  test.cc  test.wasm  test_main  tsconfig.json  update.sh  webpack.config.js
apps/: CMakeLists.txt
apps/c2m/: c2m.c
apps/driver/: ld.c  ld.cc  m.c  m.cc
apps/wasm/: index.html  libc.c  mw.c  mwat.c  term.html  term.js  wm.c  wm.html  wm.js
apps/wit/: wit.c
lib/: CMakeLists.txt  math.m  stdio.m
lib/analyzer/: analyzer.c  env.c  type.c
lib/app/: app.c  error.c
lib/clib/: array.c  byte_array.c  dlmalloc.c  generic.c  getpath.c  hash.c  hashset.c  hashtable.c  malloc.c  math.c  object.c  queue.c  regex.c  stack.c  string.c  symbol.c  symboltable.c  util.c
lib/codegen/: abi_arg_info.c  arg_info.c  ast_abi_arg.c  ast_wasm.c  backend.c  cg_call.c  cg_fun.c  cg_fun_info.c  cg_var.c  codegen.c  compute_fun_info.c  env.c  fun_context.c  fun_info.c  ir_api.c  ir_arg_info.c  llvm_codegen.c  target_arg_info.c  target_info.c  type_size_info.c  wasm_codegen.c  wat_codegen.c  winx86_64_abi.c  x86_64_abi.c
lib/compiler/: compiler.c  engine.c  engine_llvm.c  engine_mlir.c  engine_wasm.c  jit.c  repl.c
lib/error/: error.c
lib/lexer/: frontend.c  init.c  keyword.c  lang_token.c  lexer.c  lexgen.c  m_lexer.c  pgen_token.c  recognizer.c  terminal.c  token.c
lib/parser/: ast.c  ast_node.c  astdump.c  earley_parser.c  grammar.c  lalr_parser.c  lalr_parser_generator.c  lr_parser.c  m_grammar.c  m_grammar.txt  m_parser.c  m_parser_obsolete.c  m_parsing_table.c  meta_grammar.c  node_type.c  parser.c  tok.c  wit_grammar.txt
lib/pgen/: lalr_parser_generator.c  lang_token.c  pgen.c  process_file.c
lib/repl/: repl.c
lib/sema/: analyzer.c  env.c  eval.c  ext_type_size_info.c  frontend.c  frontend_llvm.c  frontend_sys.c  sema_context.c  type.c  type_size_info.c
lib/sys/: getpath.c  util.c
lib/tool/: cmodule.c
lib/wasi/: ....
lib/wasm/: mwat.c  sys.c  wasm.c
lib/win/: getopt.c
lib/wit/: wit_grammar.txt
samples/: CMakeLists.txt  hello.wasm  helloworld.m  sample  sample.ir  sample.m  sample_lib.ir  sample_lib.m  sample_main.c  sample_main.cc  sample_test.c  test.c  test.m  test.wasm  test_c.c
src/: CMakeLists.txt  analyzer.c  analyzer.cc  array.c  ast.c  ast.cc  astdump.c  astdump.cc  builtins.c  builtins.cc  cmodule.c  codegen.c  codegen.cc  compiler.c  compiler.cc  env.c  env.cc  interpreter.cc  jit.c  jit.cc  lexer.c  lexer.cc  libfmemopen.c  m.c  m.cc  main.cc  parser.c  parser.cc  repl.c  repl.cc  runtime.c  runtime.cc  test.c  test.cc  type.c  type.cc  util.cc
src/analyzer/: analyzer.c  env.c  type.c
src/clib/: array.c  generic.c  hash.c  hashset.c  hashtable.c  hashtable_oa.c  math.c  object.c  queue.c  string.c  symbol.c  symboltable.c  util.c
src/codegen/: codegen.c
src/compiler/: compiler.c
src/driver/: ld.cc  m.c  m.cc
src/lexer/: lexer.c
src/lib/: array.m  stdio.m
src/parser/: ast.c  astdump.c  parser.c
src/repl/: jit.c  repl.c
src/sys/: getpath.c  math.m  stdio.m  stdlib.m
src/tool/: c2m.c  cmodule.c
src/win/: getopt.c  libfmemopen.c
test/: CMakeLists.txt  c.c  call_fun.wasm  example.html_footer_template  example.html_header_template  ghtml.js  grammar.html_footer_template  grammar.html_header_template  hello.html  hello.js  hello.wasm  helloworld.wasm  jest2html.js  package-lock.json  package.json  test.c  test.cc  test.h  test.html  test.m  test_analyzer.cc  test_analyzer_errors.cc  test_array.cc  test_astdump.cc  test_base.h  test_cmodule.cc  test_env.cc  test_env.h  test_fixture.cc  test_fixture.h  test_hashset.cc  test_hashtable.cc  test_jit.cc  test_jit_logical.cc  test_jit_relational.cc  test_lexer.cc  test_main.cc  test_main.h  test_parser.cc  test_parser_logical.cc  (+15 more)
test/app/: test_mwat.c  test_mwat.cc
test/clib/: test_array.c  test_array.cc  test_byte_array.c  test_hashset.c  test_hashtable.c  test_hashtable.cc  test_math.c  test_math.cc  test_queue.c  test_regex.c  test_stack.c  test_stack.cc  test_string.c  test_string.cc  test_symbol.c  test_symbol.cc  test_symboltable.c  test_symboltable.cc  test_util.c  test_util.cc
test/codegen/: test_cg_call.cc  test_cg_fun.cc  test_cg_fun_call.cc  test_cg_var.cc  test_codegen.cc  test_type_size_info.c  test_type_size_info.cc  test_wasm_codegen.c  test_wasm_codegen.cc  test_wat_codegen.c  test_wat_codegen.cc
test/compiler/: test_jit.cc  test_jit_adt.cc  test_jit_array.cc  test_jit_control.cc  test_jit_error.cc  test_jit_logical.cc  test_jit_relational.cc  test_main.h
test/html_template/: shell_minimal.html
test/jstests/: aggregate.test.js  array.test.js  bitwise.test.js  code-mandelbrot.test.js  control.test.js  error-analyzer.test.js  error-lexer.test.js  error-parser.test.js  example-mandelbrot.test.js  function.test.js  general.test.js  logic.test.js  mtest.js  mw.bitwise.test.js  mw.control.test.js  mw.error.analyzer.test.js  mw.error.parser.test.js  mw.error.test.js  mw.fun.test.js  mw.logic.test.js  mw.mctest.test.js  mw.mtest.js  mw.mtest.test.js  mw.numeric.test.js  mw.ref.test.js  mw.relation.test.js  mw.struct.test.js  mw.test.js  numeric.test.js  pattern-match.test.js  reference-type.test.js  reference.test.js  relation.test.js  struct.test.js  type.test.js  wm.test.js
test/lexer/: test_lexer.c  test_lexer.cc  test_lexer_error.c  test_m_lexer.c  test_m_lexer.cc  test_m_lexer1.cc  test_token.c
test/parser/: test_ast.c  test_astdump.cc  test_earley_parser.c  test_g_parser.c  test_g_parser.cc  test_grammar.c  test_grammar.cc  test_lalr_parser.c  test_lalr_parser_expr.c  test_lr_parser.c  test_lr_parser_expr.c  test_parser.c  test_parser.cc  test_parser_adt.c  test_parser_error.c  test_parser_expr.c  test_parser_logical.cc  test_parser_record.c  test_parser_relational.cc  test_parser_struct.c  test_parser_tuple.c  test_parser_type.c  test_parser_union.c  test_parser_variant.c  test_tok.c  test_tok.cc
test/sema/: test_analyzer.c  test_analyzer.cc  (+9 more)
(+435 files in other folders)
